{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 34,
  "lineage": "106f7f15-60d0-f4c9-60ce-ac39784cde5e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584673484364:internet-gateway/igw-0ea32dda1ef38f9f3",
            "id": "igw-0ea32dda1ef38f9f3",
            "owner_id": "584673484364",
            "tags": {
              "Name": "feedback-igw"
            },
            "tags_all": {
              "Name": "feedback-igw"
            },
            "vpc_id": "vpc-018879d470f9cf928"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584673484364:route-table/rtb-032f47032fb844404",
            "id": "rtb-032f47032fb844404",
            "owner_id": "584673484364",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea32dda1ef38f9f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "feedback-rt"
            },
            "tags_all": {
              "Name": "feedback-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-018879d470f9cf928"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0618b3c3fd863ac8f",
            "route_table_id": "rtb-032f47032fb844404",
            "subnet_id": "subnet-03d2b3c8c9f5a81e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.private_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d2ed879e0c50feb",
            "route_table_id": "rtb-032f47032fb844404",
            "subnet_id": "subnet-020716b3fb3423479"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584673484364:security-group/sg-009ba7422ae0d3838",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009ba7422ae0d3838",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "feedback-rds-sg",
            "name_prefix": "",
            "owner_id": "584673484364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "feedback-rds-sg"
            },
            "tags_all": {
              "Name": "feedback-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-018879d470f9cf928"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584673484364:subnet/subnet-03d2b3c8c9f5a81e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d2b3c8c9f5a81e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "584673484364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "feedback-private-a"
            },
            "tags_all": {
              "Name": "feedback-private-a"
            },
            "vpc_id": "vpc-018879d470f9cf928"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584673484364:subnet/subnet-020716b3fb3423479",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020716b3fb3423479",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "584673484364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "feedback-private-b"
            },
            "tags_all": {
              "Name": "feedback-private-b"
            },
            "vpc_id": "vpc-018879d470f9cf928"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584673484364:vpc/vpc-018879d470f9cf928",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0136841c3ac4c2141",
            "default_route_table_id": "rtb-045c8989452d01bc5",
            "default_security_group_id": "sg-0ca1856cdfe4da5d5",
            "dhcp_options_id": "dopt-049df31f00513ba81",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018879d470f9cf928",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-045c8989452d01bc5",
            "owner_id": "584673484364",
            "tags": {
              "Name": "feedback-vpc"
            },
            "tags_all": {
              "Name": "feedback-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}